# CS7270-compiler-project

./: .gitignore  Cargo.toml  demo-programs.txt  rustfmt.toml
compiler/: Cargo.toml
compiler/src/: ast.rs  hir.rs  lexer.rs  main.rs  mir.rs  parser.rs  parser_nom.rs  parser_old.rs  span.rs  syntax.txt  token.rs  util.rs
compiler/src/mir/: compile.rs  optimizations.rs
compiler/src/mir/compile/: const_eval.rs
input/: add.src  array_sum.src  break_return.src  bubblesort.src  bubblesort_main.c  collatz.src  exit_with_argc_status.src  fibbonacci.src  fibonacci.src  fibonacci_main.src  fizzbuzz.src  gcd.rs  guessing_game.src  hello_world.src  patterns.src  return.src  simple_addr_of.src  simple_call.src  simple_calls.src  simple_if.src  simple_if_main.c  simple_static.src  statics.src  very_simple_if.src  very_simple_if_main.c
runner/: Cargo.toml
runner/src/: main.rs
