[workspace]
members = [
    "compiler",
    "runner",
]
resolver = "2"

[profile.dev]
opt-level = 1

[workspace.lints.clippy]
todo = "warn"
needless_lifetimes = "allow"
match_like_matches_macro = "allow"
unnecessary_fold = "allow" # false positive, would change semantics
assigning_clones = "allow" # less clear IMO
comparison_chain = "allow"
too_many_arguments = "allow"
