[package]
name = "compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
copy-range = "0.1.1"
either = "1.10.0"
env_logger = "0.11.3"
indexmap = "2.2.6"
itertools = "0.12.1"
log = "0.4.21"
nom = "7.1.3"
object = { version = "0.34.0", features = ["write"] }
once_cell = "1.19.0"
petgraph = "0.6.4"
zachs18-stdx = "0.1.3"

[lints]
workspace = true

[dev-dependencies]
rand = "0.8.5"
